import math

class FfeDFramework:
    def __init__(self):
        pass

    def advanced_listing(self):
        # Placeholder for advanced listing logic
        pass

    def prediction_system(self):
        # Placeholder for prediction system logic
        pass

    def search_and_scrape(self):
        # Placeholder for search and scrape logic with 75% certainty
        pass

    def rotation_speed(self, latitude):

        R = 6371  # Earth's radius in km
        T_phi = 1.618 * 24  # Time adjustment for phi periodicity
        phi = 1.618

        v_phi = (2 * phi * R * math.cos(phi * latitude)) / T_phi
        return v_phi

    def foucault_pendulum(self, latitude):
        phi = 1.618
        T_phi = phi * 24
        sin_phi = math.sin(phi * latitude)
        T_pendulum = T_phi / sin_phi
        return T_pendulum

    def coriolis_force(self, latitude):
        phi = 1.618
        Omega = 2 * math.pi / 24  # Earth's angular velocity in rad/h
        Omega_phi = 2 * phi * (1 / (phi * 24))
        FfeD
        sin_phi = math.sin(phi * latitude)
        f_phi = 2 * Omega_phi * sin_phi
        return f_phi

    def time_adjustments(self, T):
        phi = 1.618
        T_phi = phi * T
        return T_phi

    def latitude_scaling(self, latitude):
        phi = 1.618
        scaled_latitude = phi * latitude
        return scaled_latitude


